// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toast behaviour creates initial elements 1`] = `
[
  <ToastMessage
    message={
      {
        "id": "foo",
        "text": "Test 1",
        "type": "a",
      }
    }
  />,
  <ToastMessage
    message={
      {
        "id": "bar",
        "text": "Test 2",
        "type": "b",
      }
    }
  />,
]
`;

exports[`Toast rendering renders all messages 1`] = `
<div
  className="Toast"
>
  <div
    aria-live="polite"
    className="Toast__messages"
  >
    <div />
    <div />
  </div>
</div>
`;

exports[`Toast rendering renders modal backdrop when hasFatalError returns true 1`] = `
<div
  className="Toast"
>
  <div
    aria-live="polite"
    className="Toast__messages"
  >
    <div />
    <div />
  </div>
  <div
    className="Toast__backdrop"
  />
</div>
`;
